core/api/mbink.h

// ========== 类型定义 ==========

typedef struct MBinkWindow* MBinkHandle;
typedef struct MBinkTerminalObject* MBinkTerminalHandle;
MBINK_API MBinkTerminalHandle mbink_terminal_get(MBinkHandle handle,
                                                      const char* element_id);
MBINK_API void mbink_terminal_destroy(MBinkTerminalHandle terminal);
MBINK_API int mbink_terminal_write(MBinkTerminalHandle terminal,
                                        const char* data);
MBINK_API void mbink_terminal_clear(MBinkTerminalHandle terminal);
MBINK_API int mbink_terminal_execute(MBinkTerminalHandle terminal,
                                          const char* command);
MBINK_API int mbink_terminal_start_shell(MBinkTerminalHandle terminal,
                                              const char* shell);
MBINK_API int mbink_terminal_send_input(MBinkTerminalHandle terminal,
                                             const char* input);
MBINK_API void mbink_terminal_resize(MBinkTerminalHandle terminal,
                                          int rows, int cols);
MBINK_API const char* mbink_terminal_serialize(MBinkTerminalHandle terminal);