bindings/python/mbink/_ffi.py


    lib.mbink_terminal_get.restype = TM
    lib.mbink_terminal_get.argtypes = [H, c_char_p]
    lib.mbink_terminal_destroy.restype = None
    lib.mbink_terminal_destroy.argtypes = [TM]
    lib.mbink_terminal_write.restype = c_int
    lib.mbink_terminal_write.argtypes = [TM, c_char_p]
    lib.mbink_terminal_clear.restype = None
    lib.mbink_terminal_clear.argtypes = [TM]
    lib.mbink_terminal_execute.restype = c_int
    lib.mbink_terminal_execute.argtypes = [TM, c_char_p]
    lib.mbink_terminal_start_shell.restype = c_int
    lib.mbink_terminal_start_shell.argtypes = [TM, c_char_p]
    lib.mbink_terminal_send_input.restype = c_int
    lib.mbink_terminal_send_input.argtypes = [TM, c_char_p]
    lib.mbink_terminal_resize.restype = None
    lib.mbink_terminal_resize.argtypes = [TM, c_int, c_int]
    lib.mbink_terminal_serialize.restype = c_void_p
    lib.mbink_terminal_serialize.argtypes = [TM]
